# Encora

./: Change.md  README.md
Encora_Modern_C++_Cmake_Conan_Assignment/: CMakeLists.txt  README.md  conanfile.py  main.cpp
Encora_Modern_C++_Cmake_Conan_Assignment/clock/: CMakeLists.txt  conanfile.py
Encora_Modern_C++_Cmake_Conan_Assignment/clock/include/: clock.h  constants.h
Encora_Modern_C++_Cmake_Conan_Assignment/clock/src/: clock.cpp
Encora_Modern_C++_Cmake_Conan_Assignment/graph/: CMakeLists.txt  conanfile.py
Encora_Modern_C++_Cmake_Conan_Assignment/graph/include/: graph.h
Encora_Modern_C++_Cmake_Conan_Assignment/graph/src/: graph.cpp
